--- a/StoreStock/Views/index.html
+++ b/StoreStock/Views/index.html
@@ -1,3 +1,12 @@
-﻿<html>
-Hellowww
-</html>
+﻿@Master['MasterPage']
+
+@Section['Content']
+<div class="pageTitle">Main Page</div>
+<div>
+	This is the default landing page for your configuration website.
+</div>
+@EndSection
+
+@Section['Other']
+This area can be used to display other helpful information.
+@EndSection
