--- a/StoreStock/Views/index.html
+++ b/StoreStock/Views/index.html
@@ -1,6 +1,6 @@
-﻿@Master['MasterPage']
+﻿@Master['LandingPage']
 
-@Section['Content']
+<!--@Section['Content']
 <div class="pageTitle">Main Page</div>
 <div>
 	This is the default landing page for your configuration website.
@@ -9,4 +9,4 @@
 
 @Section['Other']
 This area can be used to display other helpful information.
-@EndSection
+@EndSection-->
