--- a/StoreStock/Views/StockViewer.html
+++ b/StoreStock/Views/StockViewer.html
@@ -71,17 +71,14 @@
         </div>
 
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:pl-20 xl:mt-28">
-          <div class="sm:text-center lg:text-left">
+          <div class="sm:text-center lg:text-left  w-3/4">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <div class="block">Hello, User</div>
+              <span class="block">Hello, <span class="text-red-500">@Model.StoreName</span></span>
             </h1>
-            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-3xl md:text-4xl">
-              <div class="block text-red-500">Your Store Stock Here</div>
+            <h1 class="mt-4 text-4xl tracking-tight font-extrabold text-gray-900 sm:text-3xl md:text-4xl">
+              <span class="block">Your Store Stock is Online!</span>
             </h1>
 
-            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Your Store Stock view is online!
-            </p>
             <!--            <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
                           <div class="rounded-md shadow">
                             <a href="#"
