--- a/StoreStock/Views/StockViewerIndex.html
+++ b/StoreStock/Views/StockViewerIndex.html
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    @Each.Model.ListOfStoreStock
+    @Each.Model.StoreStockData.StoreData
     <tr class="bg-gray-100">
       <td class="p-3 ">
         <div class="flex align-items-center">
@@ -31,7 +31,7 @@
         @Current.Type
       </td>
       <td class="p-3 font-bold text-center">
-        @Current.Quantity
+        @Current.Amount
       </td>
       <td class="p-3 text-center">
         <span class="">Rp.@Current.Price</span>
