--- a/StoreStock/Views/StockViewerIndex.html
+++ b/StoreStock/Views/StockViewerIndex.html
@@ -10,7 +10,7 @@
       <th class="p-3">Price</th>
       <th class="p-3">Discount</th>
       <th class="p-3">Info</th>
-      <th class="p-3">Action</th>
+<!--      <th class="p-3">Action</th>-->
     </tr>
   </thead>
   <tbody>
@@ -19,7 +19,7 @@
       <td class="p-3 ">
         <div class="flex align-items-center">
           <img class="rounded-full h-12 w-12"
-               src="https://images.unsplash.com/photo-1613588718956-c2e80305bf61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80" alt="unsplash image">
+               src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Ski_trail_rating_symbol-green_circle.svg/600px-Ski_trail_rating_symbol-green_circle.svg.png" alt="unsplash image">
           <div class="ml-3 lg:w-4/5">
             <div class="">
               @Current.Title
@@ -45,7 +45,7 @@
         <!--<span class="bg-green-400 text-gray-50 rounded-md px-2">available</span>-->
         -
       </td>
-      <td class="p-3 md:w-1/6 text-center">
+<!--      <td class="p-3 md:w-1/6 text-center">
         <a href="#" class="text-gray-400 hover:text-gray-100 mr-2">
           <i class="material-icons-outlined text-base">visibility</i>
         </a>
@@ -55,7 +55,7 @@
         <a href="#" class="text-gray-400 hover:text-gray-100  ml-2">
           <i class="material-icons-round text-base">delete_outline</i>
         </a>
-      </td>
+      </td>-->
     </tr>
     @EndEach
   </tbody>
